# astari

./: .gitmodules  CMakeLists.txt  Makefile  README.md  backward-fair.pl  main.cpp  parser.pl  parser.plo
apps/: CMakeLists.txt  astari-pl.cpp  astari-plo.cpp
pl/: CMakeLists.txt  README.md  dictionary.hpp
pl/builtins/: CMakeLists.txt  breadthfirst.hpp  iso.hpp  minimal.hpp  parsing.hpp  tabulate.hpp
pl/builtins/src/: arithmetics.cpp  io_writing.cpp  iso.cpp  iso_arithmetics.pl  iso_basic.pl  iso_writing_characters.pl  iso_writing_terms.pl  term_comparison.cpp  term_creation_and_decomposition.cpp  throwcatch.cpp  type_testing.cpp
pl/builtins/t/: arithmetics.pl  term_comparison.pl  type_testing.pl
pl/coding/: CMakeLists.txt  basic_decoder.hpp  basic_encoder.hpp  tape_writer.hpp
pl/core/: CMakeLists.txt  compare.hpp  interpreter.hpp  match.hpp  runtime.hpp
pl/core/src/: compare.cpp  match.cpp  runtime.cpp
pl/core/src/interpreter/: interpret.cpp  interpreter.cpp  make_true.cpp
pl/misc/: CMakeLists.txt  base64.h  display.hpp  object_allocator.hpp  object_file.hpp  show_location.hpp
pl/misc/src/: base64.cpp  display.cpp
pl/misc/src/object_file/: object_file.cpp  v0.cpp  v1.cpp
pl/parse/: CMakeLists.txt  lexer.hpp  object_parser.hpp  parse_error.hpp  prolog_parser.hpp  syntax_parser.hpp
pl/parse/src/: lexer.cpp  prolog_parser.cpp
pl/parse/src/syntax_parser/: default_grammars.cpp  syntax_parser.cpp
utl/: arena_allocator.hpp  resolve_path.hpp  rooted_forest.hpp  state_saver.hpp
